--- a/styles/3g-architect.css
+++ b/styles/3g-architect.css
@@ -82,7 +82,7 @@ nav li a{
 }
 
 /* main styles */
-main{
+main, footer{
   max-width: 1440px;
   margin: 70px auto;
 }
@@ -122,6 +122,118 @@ main{
   font-weight: 700;
 }
 
+/* features section styles */
+.features{
+  margin-top: 130px;
+  display: flex;
+  gap: 120px;
+}
+
+.features .section-title{
+  border-left: 5px solid #FF900E;
+  padding-left: 20px;
+  margin-top: 40px;
+  margin-bottom: 25px;
+}
+
+.feature-content .card{
+  padding: 30px;
+  margin-bottom: 20px;
+  border-radius: 8px;
+  background: #FFF;
+  box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+}
+
+.card-title{
+  color: #131313;
+  font-size: 1.25rem;
+  font-weight: 600;
+  margin-bottom: 15px;
+}
+
+.feature-img img{
+  height: 90%;
+  margin-left: 90px;
+}
+
+/* 10 year badge */
+.ten-years-badge{
+  width: 342px;
+  border-radius: 8px;
+  background: #FF900E;
+  color: #FFF;
+  padding: 40px;
+  position: relative;
+  bottom: 100px;
+}
+
+.ten-years-badge h2{
+  text-align: center;
+  font-size: 3rem;
+  font-weight: 700;
+  margin: 0;
+}
+
+.ten-years-badge p{
+  font-size: 1.5rem;
+  font-weight: 500;
+  text-align: center;
+  margin-top: 10px;
+}
+
+/* facts section */
+.facts-card-container{
+  display: flex;
+  justify-content: space-around;
+  margin-top: 60px;
+}
+
+.facts-card-container .card{
+  border-radius: 8px;
+  border: 1px solid #FF900E;
+  color: #424242;
+  text-align: center;
+  padding: 30px;
+}
+
+.facts-card-container .card-title{
+  font-size: 1.25rem;
+  font-weight: 600;
+  margin-top: 5px;
+}
+
+.facts-card-container .card-stats{
+  font-size: 2.8rem;
+  font-weight: 600;
+  margin: 10px 0;
+}
+
+/* sponsors section styles */
+.sponsors{
+  text-align: center;
+  margin-top: 100px;
+}
+
+.sponsors-img-container{
+  margin-top: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  gap: 50px;
+}
+
+.sponsors-img-container img{
+  width: 165px;
+}
+
+/* footer section styles */
+footer{
+  border-radius: 8px;
+  background: #FFF4E7;
+  text-align: center;
+  padding: 38px 410px;
+}
+
 
 
 
@@ -144,7 +256,8 @@ main{
     padding: 20px;
   }
 
-  nav{
+  nav,
+  .features{
     flex-direction: column;
   }
   
@@ -177,6 +290,32 @@ main{
   .teams-content{
     padding: 0 20px;
   }
+
+  .facts-card-container{
+    flex-direction: column;
+    gap: 20px;
+    padding: 0 30px;
+  }
+
+  .feature-img img{
+    width: 90%;
+    margin-left: 0;
+  }
+
+  .ten-years-badge{
+    position: static;
+    max-width: 300px;
+  }
+
+  .sponsors-img-container{
+    flex-direction: column;
+    gap: 50px;
+  }
+
+  footer{
+    width: 100%;
+    padding: 38px 0;
+  }
 }
 
 /* Tablet or Medium devices */
@@ -185,7 +324,8 @@ main{
     padding: 50px;
   }
 
-  nav{
+  nav,
+  .features{
     flex-direction: column;
   }
   
@@ -206,5 +346,30 @@ main{
   .teams-img-container{
     grid-template-columns: repeat(2, 1fr);
     margin-top: 50px;
+  }
+
+  .facts-card-container{
+    gap: 20px;
+    padding: 5px;
+  }
+
+  .sponsors-img-container{
+    flex-direction: column;
+    gap: 50px;
+  }
+
+  .facts,
+  .features{
+    padding-left: 30px;
+  }
+
+  .feature-img img{
+    width: 100%;
+    margin-left: 0;
+  }
+
+  footer{
+    width: 100%;
+    padding: 38px 0;
   }
 }
